test/spec_vectors/simd_splat/fail/module_16.wat
(module (func (result v128) f64x2.splat (i32.const 0)))